--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ hr {
 }
 dialog {
 	border: none;
-    width: 40%;
-    border-radius: 16px;
+	width: 40%;
+	border-radius: 16px;
 }
 form {
 	padding: 40px;
@@ -115,40 +115,44 @@ input[type="checkbox"]:checked {
 .list {
 	border-radius: 16px;
 	display: grid;
-    justify-items: center;
-    align-items: center;
+	justify-items: center;
+	align-items: center;
 	grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
 	gap: 40px;
 	background-color: white;
 	padding: 20px;
 }
 .list-input[type="checkbox"] {
-    width: 32px;
-    height: 32px;
+	width: 32px;
+	height: 32px;
 }
 .green {
-    background-color: #21B867;
-    color: white;
-    font-size: 32px;
-    font-weight: 700;
-    padding: 8px;
+	background-color: #21b867;
+	color: white;
+	font-size: 32px;
+	font-weight: 700;
+	padding: 8px;
 }
 .red {
-    background-color: #D73C3C;
-    color: white;
-    font-size: 32px;
-    font-weight: 700;
+	background-color: #d73c3c;
+	color: white;
+	font-size: 32px;
+	font-weight: 700;
 }
 h2 {
-    color: #2A4144;
-    font-weight: 700;
-    font-size: 32px;
+	color: #2a4144;
+	font-weight: 700;
+	font-size: 32px;
 }
 .darkgreen {
-    background-color: #063F35;
+	background-color: #063f35;
 }
 p {
-    color: #2A4144;
-    font-weight: 400;
-    font-size: 18px;
+	color: #2a4144;
+	font-weight: 400;
+	font-size: 18px;
+}
+button:active {
+	opacity: 0.7;
+	transform: translateY(4px);
 }
