--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ input[type="checkbox"]:checked {
 	padding: 8px;
 }
 .red {
-	padding: 2px 4px;
+	padding: 8px;
 	background-color: #d73c3c;
 	color: white;
 	font-size: 32px;
